# thermometer-artifact

./: .gitignore  CMakeLists.txt  README.md  branch_mpki.py  champsim_config_fdip.json  champsim_config_fdip_perfect_cache.json  champsim_config_fdip_predecoder_btb.json  champsim_pt_config.json  check_reuse_distance.py  config.sh  default_config.cmake  generate_ipc_summary.py  generate_result.py  plot_access_counter.py  plot_access_record.py  plot_hot_warm_cold.py  plot_hwc_opt_compare.py  plot_reuse_distance.py  run_test.py
branch/tage/: tage.cc
branch/tage-sc-l/: tage-sc-l.cc
btb/: access_counter.h  access_record.h  accuracy.h  branch_bias.h  multi_level_btb.h  prefetch_stream_buffer.h  reuse_distance.h
btb/basic_btb/: basic_btb.cc
btb/basic_shotgun_btb/: basic_shotgun_btb.cc
btb/clean_basic_btb/: clean_basic_btb.cc
btb/ghrp_btb/: ghrp_btb.cc
btb/ghrp_shotgun_btb/: ghrp_shotgun_btb.cc
btb/hawkeye_btb/: hawkeye_btb.cc  hawkeye_predictor.h
btb/hawkeye_shotgun_btb/: hawkeye_shotgun_btb.cc  optgen.h
btb/hot_warm_cold_btb.template/: hot_warm_cold_btb.cc  set_80_50_f_keep_curr_hotter.cmake
btb/hot_warm_cold_predecoder_btb.template/: hot_warm_cold_predecoder_btb.cc  set_80_50_f_keep_curr_hotter_lru.cmake
btb/hot_warm_cold_shotgun_btb.template/: hot_warm_cold_shotgun_btb.cc
btb/hwc_btb.template/: hwc_btb.cc  set_16_cate_f_keep_curr_hotter_lru.cmake  set_50_65_80_f_keep_curr_hotter_lru.cmake  set_50_80_f_keep_curr_hotter.cmake  set_80_f_keep_curr_hotter_lru.cmake  set_8_cate_f_keep_curr_hotter_lru.cmake
btb/multi_level_basic_btb/: multi_level_basic_btb.cc
btb/multi_level_hwc_btb.template/: default.cmake  multi_level_hwc_btb.cc
btb/multi_level_opt_btb/: multi_level_opt_btb.cc
btb/opt_btb/: opt_btb.cc
btb/opt_btb_generate/: opt_btb_generate.cc
btb/opt_shotgun_btb/: opt_shotgun_btb.cc
btb/prob_btb.template/: prob_btb.cc  set1.cmake
btb/prob_opt_compare_btb/: prob_opt_compare_btb.cc
btb/prob_shotgun_btb/: prob_shotgun_btb.cc
btb/random_btb/: random_btb.cc
btb/reuse_predict_btb.template/: reuse_predict_btb.cc  set0.cmake  set1.cmake  set2.cmake  set3.cmake
btb/srrip_btb/: srrip_btb.cc
btb/srrip_friendly_btb.template/: set0.cmake  set1.cmake  set2.cmake  set3.cmake  srrip_friendly_btb.cc
btb/srrip_second_btb.template/: set0.cmake  srrip_second_btb.cc
btb/srrip_shotgun_btb/: srrip_shotgun_btb.cc
btb/unlimited_btb/: unlimited_btb.cc
btb/victim_buffer_btb/: victim_buffer_btb.cc
cmake_configs/: fdip.cmake  fdip128.cmake  fdip256.cmake  fdip64.cmake  fdip_chubby.cmake  fdip_multi_level_btb.cmake  icache.cmake
cmake_targets/: confluence_hot_warm_cold_80_50_f_keep_curr_hotter_lru.cmake  confluence_lru.cmake  confluence_opt.cmake  d_jolt_lru.cmake  eip_lru.cmake  fnl_mma_lru.cmake  ghrp.cmake  hawkeye.cmake  hot_warm_cold_80_50_f_keep_curr_hotter.cmake  hot_warm_cold_80_50_f_keep_curr_hotter_lru.cmake  hwc_16_cate_f_keep_curr_hotter_lru.cmake  hwc_50_65_80_f_keep_curr_hotter_lru.cmake  hwc_50_80_f_keep_curr_hotter.cmake  hwc_50_80_f_keep_curr_hotter_lru.cmake  hwc_80_f_keep_curr_hotter_lru.cmake  hwc_8_cate_f_keep_curr_hotter_lru.cmake  lru.cmake  multi_level_hwc.cmake  multi_level_lru.cmake  multi_level_opt.cmake  next_line_lru.cmake  no_l1i.cmake  opt.cmake  opt_insert_taken_generate.cmake  perfect_bp.cmake  predecoder_btb_hot_warm_cold_80_50_f_keep_curr_hotter_lru.cmake  predecoder_btb_lru.cmake  predecoder_btb_opt.cmake  prob.cmake  random.cmake  shotgun_hot_warm_cold_80_50_f_keep_curr_hotter_lru.cmake  shotgun_lru.cmake  shotgun_opt.cmake  srrip.cmake  unlimited_size.cmake  victim_buffer.cmake
inc/: circular_buffer.hpp  instruction.h  ooo_cpu.h  tracereader.h  twig_prefetcher.h  twig_profile.h
input_generalization/: input_generalization_result_analysis.py  run_input_generalization.py
paper_results/: way_speedup.csv
paper_results/CDF/: CDF_hit_access_pt.csv  dynamic_execution_CDF_pt.csv
paper_results/accuracy/: accuracy.csv
paper_results/branch_mpki/: branch_mpki_result_pt.csv  existing_branch_mpki_reduction_result_pt.csv  existing_branch_mpki_result_pt.csv  iso_branch_mpki_reduction_result_pt.csv  motivation_branch_mpki_reduction_result_pt.csv  motivation_branch_mpki_result_pt.csv  num_cate_branch_mpki_reduction_result_pt.csv  num_cate_branch_mpki_result_pt.csv  very_first_branch_mpki_reduction_result_pt.csv  very_first_branch_mpki_result_pt.csv
paper_results/btb_miss/: btb_miss.csv  btb_miss_reduction.csv
paper_results/btb_size/: ipc_result.csv  percentage_opt_ipc_speedup_size.csv
paper_results/bypass/: bypass.csv
paper_results/coverage/: coverage.csv
paper_results/fdip_runahead/: ipc_result.csv  percentage_opt_ipc_speedup_runahead.csv
paper_results/hwc_bias_corr/: hwc_bias_corr.csv
paper_results/ipc/: existing_ipc_result_pt.csv  existing_ipc_speedup_result_pt.csv  ipc_ipc1.csv  ipc_speedup_ipc1.csv  iso_ipc_result_pt.csv  iso_ipc_speedup_result_pt.csv  motivation_ipc_result_pt.csv  motivation_ipc_speedup_result_pt.csv  (+4 more)
plots/: branch_distribution_analysis.py  btb_miss_analysis.py  copy_traces.py  gen_data_summary.py  gen_footprint_size_raw_data.py  gen_input_generalization.py  gen_overhead.py  gen_sensitivity.py  plot_associativity.py  plot_btb_size.py  plot_cdf.py  plot_fdip_runahead.py  plot_hwc_overlap.py  plot_input_generalize.py  plot_ipc1_s_curve.py  plot_ipc_ipc1.py  plot_manual_input_generalize.py  plot_overhead.py  plot_sensitivity.py
prefetcher/: fdip.h
src/: core_inst.cc  main.cc  ooo_cpu.cc  tracereader.cc
templates/: champsim_constants.h
(+28 files in other folders)
